syntax = "proto3";

package tunnel;

// --- A. Control Stream Messages ---
// Used for configuration sync, heartbeat, global errors, etc., sent on a dedicated, persistent QUIC stream.

message ControlMessage {
  // Core control message for configuration sync, heartbeat, tunnel connection initialization, etc.
  oneof payload {
    ConfigSyncRequest config_sync = 1;
    ConfigSyncResponse config_sync_response = 2;
    Heartbeat heartbeat = 3;
    ErrorMessage error_message = 4;
    ConfigPushNotification config_push = 5;
    ConfigHashRequest hash_request = 6;
    ConfigHashResponse hash_response = 7;
    IncrementalConfigUpdate incremental_update = 8;
    UnregisterRequest unregister = 9;
  }
}

message UnregisterRequest {
  string client_id = 1;
  string reason = 2;
}

message Heartbeat {
  int64 timestamp = 1;
}

message ConfigPushNotification {
  string config_version = 1;
  string client_group = 2;
}

// Lightweight hash check request (15s interval)
message ConfigHashRequest {
  string client_id = 1;
  string group = 2;
  string current_hash = 3;  // Client's current config hash
}

// Lightweight hash check response
message ConfigHashResponse {
  string config_hash = 1;   // Server's current config hash
  bool needs_update = 2;    // True if hashes don't match
}

// Incremental config update (server push)
message IncrementalConfigUpdate {
  string config_hash = 1;           // New hash after applying changes
  repeated Rule added_rules = 2;    // New rules to add
  repeated Rule updated_rules = 3;  // Existing rules to update
  repeated string deleted_rule_ids = 4;  // Rule IDs to delete
  repeated Upstream added_upstreams = 5;
  repeated Upstream updated_upstreams = 6;
  repeated string deleted_upstream_names = 7;
}

message ConfigSyncRequest {
  string client_id = 1;
  string group = 2;
  string config_version = 3;  // Keep for backward compatibility
  string current_hash = 4;    // Client's current config hash
  bool request_full = 5;      // True for full sync (5min), false for hash check
}

message ConfigSyncResponse {
  string config_version = 1;
  string config_hash = 2;     // Hash of the config
  repeated Rule rules = 3;
  repeated Upstream upstreams = 4;
}

message Rule {
  string rule_id = 1;
  string type = 2; // http/grpc/tcp
  string match_host = 3;
  string match_path_prefix = 4;
  map<string, string> match_header = 5;
  string action_proxy_pass = 6; // Upstream name (e.g., "backend") or direct address (e.g., "192.168.1.10:80")
  string action_set_host = 7;   // Modify Host header to this value
}

message Upstream {
  string name = 1;
  repeated UpstreamServer servers = 2;
  string lb_policy = 3;
}

message UpstreamServer {
  string address = 1;
  bool resolve = 2;
}

message ErrorMessage {
  int32 code = 1;
  string message = 2;
  string request_id = 3;
}

// --- B. Data Stream Routing Header ---
// This is the first message sent on each new QUIC bidirectional stream.

message DataStreamHeader {
  // Routing information
  string request_id = 1;             // Used to track the entire request chain
  string type = 2;                   // Protocol type: "http", "grpc", "tcp"
  string host = 3;                   // Host header value for rule matching

  // Reserved fields (for future extension)
  map<string, string> metadata = 4;
}


